Week01: notebooks + figures + results_artifacts/week01_qstrict_cap8 (QC+cap=8)

--- a/notebooks/report.ipynb
+++ b/notebooks/report.ipynb
@@ -3,12 +3,114 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": "# Report (living draft)"
+      "source": [
+        "# Report (living draft)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "25e847df",
+      "metadata": {},
+      "source": [
+        "## Project Scope (General)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9ef45ee3",
+      "metadata": {},
+      "source": [
+        "1. Research Objective   \n",
+        "The central goal of this research is to investigate whether the correctness of a language model's reasoning trace can be predicted from simple, interpretable signals. We hypothesize that observable properties of a model's generated text, such as its length, structure, and semantic content, can serve as effective proxies for logical validity, particularly in formal domains like competitive mathematics. Our primary objective is to establish strong, reproducible baselines for this prediction task before exploring more complex, model-internal features.\n",
+        "\n",
+        "2. Experimental Domain & Datasets   \n",
+        "Initial Domain: We begin our investigation with the AIME (American Invitational Mathematics Examination) dataset, covering problems from 1983–2024. This provides a rich, structured environment of formal reasoning problems with unambiguous ground-truth answers.     \n",
+        "Future Work: To test the generality of our findings, we plan to extend the analysis to the GPQA (Graduate-Level Google-Proof Q&A) dataset, which represents a different and more complex reasoning domain.\n",
+        "\n",
+        "3. Models & Methodology   \n",
+        "Model Selection: To ensure a controlled and reproducible experimental setup, we will begin by focusing on small, open-source language models in the 1–4 billion parameter range. Our initial baseline will be established using the DeepSeek-R1-Distill-Qwen-1.5B model. We will subsequently introduce 1–2 additional models of a comparable size to measure the consistency of our findings across different architectures.    \n",
+        "Data Generation: For each problem in our dataset, we will generate a set of at least 8 independent reasoning traces to ensure a robust sample size for our analysis. All generated data will be stored in a standardized JSON format to facilitate downstream processing.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1965d296",
+      "metadata": {},
+      "source": [
+        "## Weekly Progress Report: AIME Data Cleaning & Initial Signal Analysis\n"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": "This notebook accumulates findings weekly."
+      "source": [
+        "This week, the AIME dataset was fully cleaned, standardized, and prepared for analysis. A simple quality gate was enforced on all generated reasoning traces, and uniform coverage was established by capping generations at 8 per problem. High-level figures were regenerated based on this clean data. The most significant early signal is that reasoning length (in tokens) strongly correlates with correctness, making it a powerful candidate for our initial baseline models. Logprobs were successfully used as a quality filter to remove degenerate traces, but are not being used as a primary modeling feature in this initial phase. The net result is that the AIME dataset is now analysis-ready, with consistent data quality across all years and variants.\n",
+        "\n",
+        "**What I Did This Week** \n",
+        "\n",
+        "**Standardized Data**: Enforced a canonical key for all problems: (year, variant ∈ {I, II}, problem 1–15) and a consistent JSON schema for all outputs.  \n",
+        "\n",
+        "**Implemented a Quality Gate**: Kept only those reasoning traces with avg_neg_logprob > 0, total_neg_logprob > 0, and non-empty token_neg_logprobs to ensure data integrity.  \n",
+        "\n",
+        "**Ensured Uniform Coverage**: Capped generations at a maximum of 8 per problem after the quality control step, ensuring a balanced dataset.\n",
+        "\n",
+        "**Generated Reports & Figures**: Created CSV summaries and initial plots for rapid inspection and signal analysis.  \n",
+        "\n",
+        "**Conducted a Data Audit**: Verified that AIME-II exists for all post-2000 problems and confirmed that any \"missing\" problems in our set correspond to known gaps in the source dataset, not pipeline errors. \n",
+        "\n",
+        "\n",
+        "**Quick Numbers (Week 01 AIME Run)**\n",
+        "\n",
+        "Total Generations after QC & Capping: **7,744**\n",
+        "\n",
+        "Correct Answers: **2,804**\n",
+        "\n",
+        "Incorrect Answers: **4,818**\n",
+        "\n",
+        "Unknown (Missing Ground-Truth or Extracted Answer): **122**\n",
+        "\n",
+        "**Accuracy on Labeled Data: 36.79%**\n",
+        "\n",
+        "Note: \"Unknown\" rows are kept for statistical analysis but are excluded from accuracy calculations.\n",
+        "\n",
+        "\n",
+        "**Key Figures & Takeaways**\n",
+        "\n",
+        "1. **Token Length by Correctness**\n",
+        "![Token Length by Correctness](../figures/week01/01_tok_len_boxplot.png)\n",
+        "\n",
+        "**Takeaway**: There is a clear and strong signal: **longer reasoning traces tend to be more accurate.** This makes token count a simple, transparent, and powerful feature for our first baseline classifiers. \n",
+        "\n",
+        "2. **Mean Negative Logprob by Correctness**\n",
+        "![Mean −log p — Correct](../figures/week01/02_mean_nlp_hist_correct.png)\n",
+        "![Mean −log p — Incorrect](../figures/week01/03_mean_nlp_hist_incorrect.png)\n",
+        "\n",
+        "**Takeaway**: While logprobs were essential for the quality control phase to filter out empty or degenerate traces, they do not show a strong separation between correct and incorrect answers in this initial view. They will be held in reserve as a potential feature for more advanced models later.\n",
+        "\n",
+        "\n",
+        "**Key Insights & Implications (So Far)**\n",
+        "\n",
+        "We now have a **clean, uniform AIME dataset,** which makes all future comparisons and analyses reliable.\n",
+        "\n",
+        "**Reasoning length is a powerful initial signal** for correctness and will be the primary feature for our first baseline models.\n",
+        "\n",
+        "The logprobs have successfully served their purpose as a data cleaning filter, which was a critical step for ensuring the quality of our dataset.\n",
+        "\n",
+        "\n",
+        "**Action Plan for Next Week**\n",
+        "\n",
+        "**Add a Second Small Model:** Replicate the exact same data generation and cleaning pipeline for a second, comparable model.\n",
+        "\n",
+        "**Deepen the Feature Analysis:** The initial finding that response_length correlates with correctness is a powerful signal. The immediate next step is to investigate this further and identify other simple textual cues. I will write a new analysis notebook to systematically extract and evaluate features like:\n",
+        "\n",
+        "The frequency of specific mathematical keywords (e.g., \"therefore,\" \"hence,\" \"thus\").\n",
+        "\n",
+        "The count of numbers, equations, and special symbols.\n",
+        "\n",
+        "\n",
+        "**Update Notebooks & Slides:** Keep the report.ipynb and the weekly slide deck updated with these new findings.\n"
+      ]
     }
   ],
   "metadata": {
